--- a/index.html
+++ b/index.html
@@ -115,8 +115,7 @@
                 Time to add FableRPG to your server.
               </p>
               <p class="subtitle has-text-grey-light is-size-6 mt-3">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                Let your server become a realm of legends and quests with our fantasy RPG bot, where every member is a hero in a story waiting to be written.
               </p>
               <div class="buttons">
                 <a href="#" class="button is-info">
