--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
             <div class="column mt-6" data-aos="fade-left">
               <img
                 class="image has-image-centered vert-move mt-4"
-                src="assets/img/relaunch_day.svg"
-                alt="hero image"
+                src="https://i.ibb.co/93dfsFB/6204e99fbddc85da51bd3def67e083bc-photoaidcom-cropped-1.png"
+                alt="bot image"
                 style="width: 20rem;"
               />
             </div>
